--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -41,3 +41,14 @@
     margin: 10px;
     cursor: pointer;
   }
+
+  .checkout button {
+    width: 150px;
+    height: 50px;
+    background-color: rgb(19, 19, 19);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    margin: 10px;
+    cursor: pointer;
+  }
